# API_nxs

./: .python-version  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: duplicate.py  main.py  populate_script.py
src/api/: urls.py
src/api/endpoints/: brand.py  health.py  model.py
src/config/: .env.txt  database.py  database_connection.py  manage_session.py  settings.py
src/database_models/: brand_model.py  car_model.py
src/managers/: brands.py  database_operations.py  models.py
src/schemas/: brands.py  health.py  models.py
src/services/: brands.py  models.py
src/tests/: test_services_brand.py  test_services_models.py
