[project]
name = "nxs"
version = "0.1.0"
description = "Prueba Nexus"
authors = [
    {name = "Vidale C."}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pudb = "^2025.1"

[tool.ruff]
line-length = 90
